# learn-oauth-python

./: .gitignore  LEARNING_OUTCOMES.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.kiro/specs/python-oauth-learning/: design.md  requirements.md  tasks.md
scripts/: README.md  __init__.py  demo_flow.py  documentation_validation.py  hash_passwords.py  integration_test.py  performance_security_test.py  start_all.py
src/: __init__.py
src/auth_server/: __init__.py  main.py  routes.py  storage.py
src/auth_server/templates/: .gitkeep  login.html
src/client/: __init__.py  main.py  routes.py
src/client/static/: .gitkeep  style.css
src/client/templates/: .gitkeep  base.html  callback.html  error.html  resource_success.html  start_flow.html  token_success.html  user_info.html
src/resource_server/: __init__.py  main.py  middleware.py  routes.py
src/resource_server/data/: .gitkeep  protected-resource.txt
src/shared/: __init__.py  crypto_utils.py  logging_utils.py  oauth_models.py  security.py
tests/: README.md  conftest.py  test_auth_server_endpoints.py  test_client_application.py  test_crypto_utils.py  test_error_handling_edge_cases.py  test_integration_oauth_flow.py  test_logging_utils.py  test_oauth_models.py  test_resource_server_endpoints.py  test_security.py
